--- a/常用/常用依赖.md
+++ b/常用/常用依赖.md
@@ -2,8 +2,8 @@
 - [moment] - 时间格式化库
 - [bignumber.js] - 数字处理库
 - [path-to-regexp] - 路径转正则库
-- [throttle-debounce](https://github.com/niksy/throttle-debounce) - 节流、防抖
-- [lib-flexible] -> [amfe-flexible] - 移动端布局方案
+- [throttle-debounce](https://github.com/niksy/throttle-debounce) - 节流、防抖 [demo](/常用/demo[throttle-debounce])
+- [amfe-flexible] - 移动端布局方案(新的 lib-flexible)
 - [postcss-any2rem] - 任意单位转换 rem
 - [amr-js](https://www.npmjs.com/package/amr-js) audio 解码
 - [vconsole](https://github.com/Tencent/vConsole) 移动端打印调试
@@ -11,3 +11,4 @@
 - [codemirror](https://codemirror.net/) 文本编辑器
 - [simple-statistics](https://simplestatistics.org/) 数据聚合
 - [docsify](https://docsify.js.org/) 文档快速制作
+- [simple-statistics.js](https://simplestatistics.org/) 浏览器、服务器和人员的可读 JavaScript 统计方法
